# Icarus

./: .gitattributes  .gitignore  Cargo.toml  Icarus.txt  LICENSE  NOTICE  README.md
.oracle_index/tantivy/: meta.json
cortana-core/: Cargo.toml
cortana-core/src/: aether.rs  affect.rs  config.rs  emotion.rs  engine.rs  lib.rs  memory.rs  mood.rs  personality.rs  processors.rs
cortana-core/src/agents/: creative_agent.rs  emotion_agent.rs  language_agent.rs  mod.rs  social_agent.rs
cortana-mcp/: Cargo.toml
cortana-mcp/src/: handlers.rs  main.rs  server.rs  tools.rs
docs/: ARCHITECTURE.md  AUDIT-SUMMARY.md  CURRICULUM-DESIGN.md  GAME-POLISH-DESIGN.md  GPU-AUDIT.md  INTEGRATION-TEST-DESIGN.md  MATH-REVIEW.md  MCP-USAGE-GUIDE.md  TEST-GAP-ANALYSIS.md
icarus-bench/: Cargo.toml
icarus-bench/src/: main.rs  train.rs  visualize.rs
icarus-engine/: Cargo.toml
icarus-engine/examples/: train_demo.rs
icarus-engine/src/: autonomous.rs  config.rs  continual.rs  emc.rs  encoding.rs  ensemble.rs  lib.rs  manifold.rs  readout.rs  training.rs  world.rs
icarus-engine/src/agents/: action.rs  learning.rs  memory.rs  mod.rs  perception.rs  planning.rs  world_model.rs
icarus-engine/tests/: reservoir_benchmarks.rs
icarus-field/: Cargo.toml
icarus-field/src/: attractor.rs  autopoiesis.rs  criticality.rs  fp16.rs  free_energy.rs  geodesic.rs  geometrodynamic.rs  lib.rs  phase_field.rs  quantize.rs  rae.rs  spectral.rs  topology.rs
icarus-game/: Cargo.toml
icarus-game/src/: bridge.rs  main.rs  protocol.rs
icarus-gpu/: Cargo.toml
icarus-gpu/src/: buffers.rs  device.rs  lib.rs  memory.rs  npu_backend.rs  npu_client.rs  pipeline.rs
icarus-gpu/src/kernels/: metric.rs  mod.rs  rae.rs  reduction.rs  transfer.rs
icarus-math/: Cargo.toml
icarus-math/src/: clifford.rs  complex.rs  golay.rs  lib.rs  metric.rs  space_group.rs  transfer.rs
icarus-math/src/lattice/: e8.rs  hcp.rs  hypercubic.rs  leech.rs  mod.rs
icarus-mcp/: Cargo.toml
icarus-mcp/src/: main.rs  server.rs  tools.rs
icarus-viz/: Cargo.toml
icarus-viz/src/: color.rs  lib.rs  projection.rs  scene.rs  template.rs
icarus-viz/src/renderers/: combined.rs  energy_landscape.rs  lattice_field.rs  mod.rs  neuro_dashboard.rs  phase_portrait.rs  timeseries.rs
