[package]
name = "icarus-engine"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
icarus-math = { workspace = true }
icarus-field = { workspace = true }
icarus-gpu = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
