[package]
name = "icarus-field"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
icarus-math = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
half = { workspace = true }
nalgebra = { workspace = true }
