[package]
name = "icarus-game"
version = "0.1.0"
edition = "2021"

[dependencies]
icarus-engine = { workspace = true }
icarus-viz = { workspace = true }
icarus-math = { workspace = true }
icarus-field = { workspace = true }
cortana-core = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
