[package]
name = "icarus-gpu"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
icarus-math = { workspace = true }
icarus-field = { workspace = true }
cudarc = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
half = { workspace = true }
rand = { workspace = true }
byteorder = "1"
