[package]
name = "icarus-viz"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
icarus-engine = { workspace = true }
icarus-math = { workspace = true }
icarus-field = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
